--- a/form.html
+++ b/form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Create Deal</title>
+    <title>Create a new deal</title>
     <style>
         body { padding: 20px; }
         .form-group { margin-bottom: 15px; }
@@ -17,7 +17,7 @@
         <div class="form-group">
             <label>Deal Value: <input type="number" id="deal-value" required></label>
         </div>
-        <button type="submit">Create Deal</button>
+        <button type="submit">Create a new deal</button>
     </form>
 
     <script type="module">
