feat: Test a button

--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
         <button type="submit">Create Deal</button>
     </form>
 
-    <script type="module" src="./script.js"></script>
+    <script type="module" src="./dist/bundle.js"></script>
 </body>
 </html>
