--- a/index.html
+++ b/index.html
@@ -1,45 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create a New Deal</title>
+    <title>Create a new deal</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            padding: 20px;
-        }
-        .form-group {
-            margin-bottom: 15px;
-        }
-        input {
-            width: 100%;
-            padding: 8px;
-            margin-top: 5px;
-        }
-        button {
-            padding: 10px;
-            background-color: #2196F3;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
+        body { padding: 20px; }
+        .form-group { margin-bottom: 15px; }
+        input { width: 100%; padding: 8px; }
+        button { padding: 10px; background: #2196F3; color: white; border: none; }
     </style>
 </head>
 <body>
-    <h1>Create a New Deal</h1>
     <form id="deal-form">
         <div class="form-group">
-            <label for="deal-name">Deal Name:</label>
-            <input type="text" id="deal-name" required>
+            <label>Deal Name: <input type="text" id="deal-name" required></label>
         </div>
         <div class="form-group">
-            <label for="deal-value">Deal Value:</label>
-            <input type="number" id="deal-value" required>
+            <label>Deal Value: <input type="number" id="deal-value" required></label>
         </div>
-        <button type="submit">Create Deal</button>
+        <button type="submit">Create a new deal</button>
     </form>
 
-    <script type="module" src="./dist/bundle.js"></script>
+    <script type="module">
+        import AppExtensionsSDK from '@pipedrive/app-extensions-sdk';
+
+        const sdk = await new AppExtensionsSDK().initialize();
+        
+        document.getElementById('deal-form').addEventListener('submit', async (e) => {
+            e.preventDefault();
+            
+            const data = {
+                title: document.getElementById('deal-name').value,
+                value: document.getElementById('deal-value').value
+            };
+
+            try {
+                const result = await sdk.execute('CREATE_DEAL', data);
+                if (result.success) {
+                    window.parent.postMessage({ type: 'dealCreated' }, '*');
+                    alert('Deal created successfully!');
+                }
+            } catch (error) {
+                alert('Error creating deal: ' + error.message);
+            }
+        });
+    </script>
+    <script type="module" src="./script.js"></script>
+
 </body>
 </html>
